updated my intro

--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
 							<article id="intro">
 								<h2 class="major">Intro</h2>
 								<span class="image main"><img src="images/about.jpg" alt="" /></span>
-								<p>Hello, World! I'm Param Bidja, the guy second from the left in this great team photo. I am a student at the University of Connecticut studying Computer Science &amp; Engineering. I've worked as a teaching assistant for UConn, as well as a developer for Yale University. </p>
+								<p>Hello, World! I'm Param Bidja, the guy second from the left in this great team photo. I am a student at the University of Connecticut studying Computer Science &amp; Engineering. I've worked as a teaching assistant for UConn, as a software engineer for Yale University, and a software developer for JPMorgan Chase. </p>
                                 
                                 <p>
-                                Apart from work, I have many projects which I do in my spare time. Most notably, a recent project I've been involved in is rebuilding UConn's transportation mobile application. This one's still in the works! I also spend free time playing around with my Raspberry Pi to see how I can make life a little easier for others and myself. My recent interests have been in machine learning applications, as I'm working with Dr. Jinbo Bi in an independent study. I'm still very new to machine learning, but my neural networks are quickly developing &#9786  </p>
+                                Apart from work, I have many projects which I do in my spare time. Most notably, a recent project I've been involved in is rebuilding UConn's transportation mobile application. This one's still in the works! I also spend free time playing around with my Raspberry Pi to see how I can make life a little easier for others and myself. My recent interests have been in machine learning applications, as I'm working with Dr. Jinbo Bi in her machine learning laboratory. I'm still new to machine learning, but my neural networks are quickly developing &#9786  </p>
                                 
                                 <p> Feel free to contact me at parambidja@gmail.com if you want to chat!</p>
 							</article>
