--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
 								<h2 class="major">Intro</h2>
 								<span class="image main"><img src="images/about.jpg" alt="" />
 								<caption align="bottom">Team EpiPing @ HackUConn 2017. Left to right: Avi Patel, Param Bidja, Omar Amer, Cameron Morris</caption></span>
-								<p>Hello, World! I'm Param Bidja. I am a student at the University of Connecticut studying Computer Science &amp; Engineering. I've worked as a teaching assistant for UConn, as a software engineer for Yale University, and as a software developer for JPMorgan Chase. </p>
+								<p>Hello, World! I'm Param Bidja. I am a student at the University of Connecticut studying Computer Science &amp; Engineering. I've worked as a teaching assistant for UConn, as a software engineer for Yale University, and as a software developer for JPMorgan Chase, and now a software engineering intern at Amazon. </p>
 
                                 <p>
-                                Apart from work, I have many projects which I do in my spare time. Most recently, I've developed an <a href="https://tiny.cc/img-classifier"><b>image classifer</b></a> that identifies flowers. It's a web-based, open-source project to increase interest in deep learning for newcomers, and serves as a great learning experience for myself.
+                                Apart from work, I have many projects which I do in my spare time. Most recently, I've developed an <a href="https://rebrand.ly/img-classifier"><b>image classifer</b></a> that identifies flowers. It's a web-based, open-source project to increase interest in deep learning for newcomers, and serves as a great learning experience for myself.
 								Another notable project I've been involved in is rebuilding UConn Transportation's mobile application. I also spend free time playing around with my Raspberry Pi to see how I can make life a little easier for others and myself. My recent interests have been in machine learning applications, as I'm working with Dr. Jinbo Bi in her machine learning laboratory. I'm still new to machine learning, but my neural networks are quickly developing &#9786  </p>
 
                                 <p> Feel free to contact me at <a href="mailto: parambidja@gmail.com">parambidja@gmail.com</a> if you want to chat!</p>
