--- a/index.html
+++ b/index.html
@@ -37,12 +37,13 @@
 									<img src="images/avatar.jpg" alt="Avatar" style="width:150px">
 								<h1>Param Bidja</h1>
 								<p>Student
-                        &nbsp;&bull;&nbsp; Programmer &nbsp;&bull;&nbsp; Engineer </p>
+                        &nbsp;&bull;&nbsp; Researcher &nbsp;&bull;&nbsp; Engineer </p>
                                 <ul class="icons">
-
 									<li><a href="https://www.linkedin.com/in/parambidja" class="icon fa-linkedin-square"><span class="label">LinkedIn</span></a></li>
 
 									<li><a href="https://github.com/parambidja" class="icon fa-github"><span class="label">Github</span></a></li>
+
+                                    <li><a href="https://www.instagram.com/parambidja/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 
                                     <li><a href="mailto:parambidja@gmail.com?Subject=Hello" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 							</div>
@@ -50,7 +51,7 @@
 						<nav>
 							<ul>
 								<li><a href="#intro">About</a></li>
-								<li><a href="assets/blog/index.html">Blog</a></li>
+								<!-- <li><a href="assets/blog/index.html">Blog</a></li> -->
 							</ul>
 						</nav>
 					</header>
@@ -60,18 +61,43 @@
 
 						<!-- Intro -->
 							<article id="intro">
-								<h2 class="major">Intro</h2>
-								<span class="image main"><img src="images/about.jpg" alt="" />
-								<caption align="bottom">Team EpiPing @ HackUConn 2017. Left to right: Avi Patel, Param Bidja, Omar Amer, Cameron Morris</caption></span>
+								<h2 class="major">About</h2>
+								<span class="image main"><img src="images/italy.JPG" alt=""/></span>
 								
+                    <h3 class="major">Current</h3>
+	                    <ul>
+						  <li>Software Engineer @ <a href="https://amazon.com" target="_blank">Amazon</a> 👨‍💻</li>
+						  <li>Recommendation Systems for <a href="https://www.amazon.com/amazon-fashion/b?ie=UTF8&node=7141123011" target="_blank">Amazon Fashion</a> 👠🧣</li>
+						  <li>Researcher @ <a href="https://healthinfo.lab.uconn.edu/" target="_blank">Laboratory of Machine Learning & Health Informatics</a> 🔬👨‍⚕</li>
+						  <li> Regional Core Team Lead @ <a href="https://www.baps.org/" target="_blank">BAPS</a> Youth Activities 👨‍🏫</li>
+						</ul>
 
-                    <br>
-									Hello, World! I'm Param Bidja. I am a student at the University of Connecticut studying Computer Science &amp; Engineering. I've worked as a teaching assistant for UConn, as a software engineering intern for Yale University, as a software development intern for JPMorgan Chase, and now as a software engineering intern at Amazon. </p>
+                    <h3 class="major">Past</h3>
+	                    <ul>
+                            <li>Valedictorian @ <a href="https://www.engr.uconn.edu/" target="_blank">UConn Engineering</a> 🎓</li>
+                            <li>Teaching Assistant @ <a href="https://www.cse.uconn.edu/" target="_blank">UConn CSE</a> (Data Structures, Systems Programming, Computer Architecture) 🤓</li>
+    						<li>Software Engineering Intern @ <a href="https://www.amazon.jobs/en/teams/finance-technology" target="_blank">Amazon FinTech</a>👨‍💻</li>
+                            <li>Tech Lead @ <a href="https://twitter.com/storiesthatmove">DigiPopsTV</a> 🎥</li>
+    						<li>Software Engineering Intern @ <a href="https://www.jpmorganchase.com/" target="_blank">JP Morgan Chase</a>📈</li>
+                            <li>Web Development Intern @ <a href="https://www.yale.edu/">Yale University</a></li>
+						</ul>
 
-                                <p>
-                                Apart from work, I have many projects which I do in my spare time. Most recently, I've developed an <a href="https://rebrand.ly/img-classifier"><b>image classifer</b></a> that identifies flowers. It's a web-based, open-source project to increase interest in deep learning for newcomers, and serves as a great learning experience for myself.
-								Another notable project I've been involved in is rebuilding UConn Transportation's mobile application. I also spend free time playing around with my Raspberry Pi to see how I can make life a little easier for others and myself. My recent interests have been in machine learning applications, as I'm working with Dr. Jinbo Bi in her machine learning laboratory. I'm still new to machine learning, but my neural networks are quickly developing &#9786  </p>
-
+                    <h3 class="major">Projects</h3>
+                        <ul>
+                            <li>Using Graph Neural Networks to predict <b>depression</b> levels <a href="https://opencommons.uconn.edu/srhonors_theses/607/" target="_blank">[paper]</a></li>
+                            <li>Image Classifier using Transferred Learning <a href="https://github.com/parambidja/image-classifier" target="_blank">[code]</a></li>
+                            <li>Raspberry Pi HVAC Controller - making your old HVAC systems <b>smart</b> with a simple extension (ongoing)</li>
+                            <li>EpiPing - a smart EpiPen <a href="https://drive.google.com/drive/folders/0BxkS6FqSWD9MWVNTYUtOeTVsYkk" target="_blank">[demo]</a></li>
+                            <li>AlphaToe Modeling - visualization of a deep neural network that beats you at TicTacToe</li>
+                            <li><a href="https://github.com/parambidja?tab=repositories" target="_basic">A few more...</a></li>
+                        </ul>
+                    <h3 class="major">Interests</h3>
+                        <ul>
+                            <li>After reading <a href="https://www.amazon.com/When-Breath-Becomes-Paul-Kalanithi/dp/081298840X" target="_blank">When Breath Becomes Air</a> I kinda want to go to medical school</li>
+                            <li>Started growing a basil plant and I love it (her name is Tulsi) 🌱</li>
+                            <li>NYC pizza (faves: <a href="http://kestepizzeria.com/en/home/" target="_blank">Keste</a> & <a href="https://www.artichokepizza.com/" target="_blank">Artichoke Basille's</a>) 🍕 (minus the pepperoni)</li>
+                            <li> Podcasts (faves: <a href="https://podcasts.apple.com/us/podcast/revisionist-history/id1119389968" target="_blank">Revisionist History</a>, <a href="https://podcasts.apple.com/us/podcast/how-i-built-this-with-guy-raz/id1150510297" target="_blank">How I Built This</a>, <a href="https://podcasts.apple.com/us/podcast/13-minutes-to-the-moon/id1459657136" target="_blank">13 Minutes to the Moon</a>)</li> 
+                        </ul>
                                 <p> Feel free to contact me at <a href="mailto: parambidja@gmail.com">parambidja@gmail.com</a> if you want to chat!</p>
 							</article>
 
@@ -81,27 +107,6 @@
 
 							<article id="elements">
 								<h2 class="major">Elements</h2>
-
-								<section>
-									<h3 class="major">Text</h3>
-									<p>This is <b>bold</b> and this is <strong>strong</strong>. This is <i>italic</i> and this is <em>emphasized</em>.
-									This is <sup>superscript</sup> text and this is <sub>subscript</sub> text.
-									This is <u>underlined</u> and this is code: <code>for (;;) { ... }</code>. Finally, <a href="#">this is a link</a>.</p>
-									<hr />
-									<h2>Heading Level 2</h2>
-									<h3>Heading Level 3</h3>
-									<h4>Heading Level 4</h4>
-									<h5>Heading Level 5</h5>
-									<h6>Heading Level 6</h6>
-									<hr />
-									<h4>Blockquote</h4>
-									<blockquote>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan faucibus. Vestibulum ante ipsum primis in faucibus lorem ipsum dolor sit amet nullam adipiscing eu felis.</blockquote>
-									<h4>Preformatted</h4>
-
-								</section>
-
-
-
 								<section>
 
 
