--- a/index.html
+++ b/index.html
@@ -62,20 +62,21 @@
 						<!-- Intro -->
 							<article id="intro">
 								<h2 class="major">About</h2>
-								<span class="image main"><img src="images/italy.JPG" alt=""/></span>
-								
+								<span class="image main"><img src="images/india.JPG" alt=""/></span>
+
                     <h3 class="major">Current</h3>
 	                    <ul>
-						  <li>Software Engineer @ <a href="https://amazon.com" target="_blank">Amazon</a> 👨‍💻</li>
-						  <li>Recommendation Systems for <a href="https://www.amazon.com/amazon-fashion/b?ie=UTF8&node=7141123011" target="_blank">Amazon Fashion</a> 👠🧣</li>
+						  <li>Software Development Engineer II @ <a href="https://amazon.com" target="_blank">Amazon</a> 👨‍💻</li>
+						  <li>Machine Learning for <a href="https://www.amazon.jobs/en/business_categories/retail" target="_blank">Amazon Retail</a> 🛍️ 🔎</li>
 						  <li>Researcher @ <a href="https://healthinfo.lab.uconn.edu/" target="_blank">Laboratory of Machine Learning & Health Informatics</a> 🔬👨‍⚕</li>
-						  <li> Regional Core Team Lead @ <a href="https://www.baps.org/" target="_blank">BAPS</a> Youth Activities 👨‍🏫</li>
+						  <li>Regional Core Team Lead @ <a href="https://www.bapscharities.org/usa/" target="_blank">BAPS</a> Youth Activities 👨‍🏫</li>
 						</ul>
 
                     <h3 class="major">Past</h3>
 	                    <ul>
                             <li>Valedictorian @ <a href="https://www.engr.uconn.edu/" target="_blank">UConn Engineering</a> 🎓</li>
                             <li>Teaching Assistant @ <a href="https://www.cse.uconn.edu/" target="_blank">UConn CSE</a> (Data Structures, Systems Programming, Computer Architecture) 🤓</li>
+							<li>Software Development Engineer I @ <a href="https://www.amazon.com/amazon-fashion/b?ie=UTF8&node=7141123011" target="_blank">Amazon Fashion</a> 👨‍💻</li>
     						<li>Software Engineering Intern @ <a href="https://www.amazon.jobs/en/teams/finance-technology" target="_blank">Amazon FinTech</a>👨‍💻</li>
                             <li>Tech Lead @ <a href="https://twitter.com/storiesthatmove">DigiPopsTV</a> 🎥</li>
     						<li>Software Engineering Intern @ <a href="https://www.jpmorganchase.com/" target="_blank">JP Morgan Chase</a>📈</li>
@@ -96,7 +97,7 @@
                             <li>After reading <a href="https://www.amazon.com/When-Breath-Becomes-Paul-Kalanithi/dp/081298840X" target="_blank">When Breath Becomes Air</a> I kinda want to go to medical school</li>
                             <li>Started growing a basil plant and I love it (her name is Tulsi) 🌱</li>
                             <li>NYC pizza (faves: <a href="http://kestepizzeria.com/en/home/" target="_blank">Keste</a> & <a href="https://www.artichokepizza.com/" target="_blank">Artichoke Basille's</a>) 🍕 (minus the pepperoni)</li>
-                            <li> Podcasts (faves: <a href="https://podcasts.apple.com/us/podcast/revisionist-history/id1119389968" target="_blank">Revisionist History</a>, <a href="https://podcasts.apple.com/us/podcast/how-i-built-this-with-guy-raz/id1150510297" target="_blank">How I Built This</a>, <a href="https://podcasts.apple.com/us/podcast/13-minutes-to-the-moon/id1459657136" target="_blank">13 Minutes to the Moon</a>)</li> 
+                            <li> Podcasts (faves: <a href="https://podcasts.apple.com/us/podcast/revisionist-history/id1119389968" target="_blank">Revisionist History</a>, <a href="https://podcasts.apple.com/us/podcast/how-i-built-this-with-guy-raz/id1150510297" target="_blank">How I Built This</a>, <a href="https://podcasts.apple.com/us/podcast/13-minutes-to-the-moon/id1459657136" target="_blank">13 Minutes to the Moon</a>)</li>
                         </ul>
                                 <p> Feel free to contact me at <a href="mailto: parambidja@gmail.com">parambidja@gmail.com</a> if you want to chat!</p>
 							</article>
