--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 						<!-- Intro -->
 							<article id="intro">
 								<h2 class="major">About</h2>
-								<span class="image main"><img src="images/india.JPG" alt=""/></span>
+								<span class="image main"><img src="images/italy.JPG" alt=""/></span>
 
                     <h3 class="major">Current</h3>
 	                    <ul>
