--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <html>
 	<head>
+		<link rel = "icon" href="./images/avatar.jpg" type = "image/x-icon">
 				<!-- Global site tag (gtag.js) - Google Analytics -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-118745341-1"></script>
 		<script>
@@ -18,6 +19,7 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+
 	</head>
 	<body>
 
