--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<link rel = "icon" href="./images/avatar.jpg" type = "image/x-icon">
+		<link rel = "icon" href="./images/avatar_no_bg.png" type = "image/x-icon">
 				<!-- Global site tag (gtag.js) - Google Analytics -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-118745341-1"></script>
 		<script>
@@ -12,6 +12,7 @@
 
 		  gtag('config', 'UA-118745341-1');
 		</script>
+		<script src="particles.js"></script>
 
 		<title>Param Bidja</title>
 		<meta charset="utf-8" />
@@ -19,9 +20,19 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-
 	</head>
 	<body>
+
+		<!-- particles.js container -->
+		<div id="particles-js" class="particles-formatting"></div>
+		<script>
+		/* particlesJS.load(@dom-id, @path-json, @callback (optional)); */
+		particlesJS.load('particles-js', 'particlesjs-config.json', function() {
+			console.log('callback - particles.js config loaded');
+		});
+		</script>
+		<!-- stats - count particles -->
+
 
 		<!-- Wrapper -->
 			<div id="wrapper">
@@ -36,7 +47,7 @@
 										border-radius: 50%;
 										}
 									</style>
-									<img src="images/avatar.jpg" alt="Avatar" style="width:150px">
+									<img src="images/avatar_no_bg.png" alt="Avatar" style="width:150px">
 								<h1>Param Bidja</h1>
 								<p>Student
                         &nbsp;&bull;&nbsp; Researcher &nbsp;&bull;&nbsp; Engineer </p>
