cleaning up to improve speed

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<link rel = "icon" href="./images/avatar_no_bg.png" type = "image/x-icon">
+		<link rel = "icon" href="./images/avatar_no_bg.webp" type = "image/x-icon">
 				<!-- Global site tag (gtag.js) - Google Analytics -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-118745341-1"></script>
 		<script>
@@ -35,7 +35,7 @@
 										border-radius: 50%;
 										}
 									</style>
-									<img src="images/avatar_no_bg.png" alt="Avatar" style="width:150px">
+									<img src="images/avatar_no_bg.webp" alt="Avatar" style="width:150px">
 								<h1>Param Bidja</h1>
 								<p>Student
                         &nbsp;&bull;&nbsp; Researcher &nbsp;&bull;&nbsp; Engineer </p>
@@ -63,7 +63,7 @@
 						<!-- Intro -->
 							<article id="intro">
 								<h2 class="major">About</h2>
-								<span class="image main"><img src="images/italy.JPG" alt=""/></span>
+								<span class="image main"><img src="images/italy.webp" loading="lazy" alt=""/></span>
 
                     <h3 class="major">Current</h3>
 	                    <ul>
