fixing safari issue

--- a/index.html
+++ b/index.html
@@ -31,16 +31,16 @@
 						<div class="content">
 							<div class="inner">
 								<style>
-									img {
-										border-radius: 50%;
-										}
-									</style>
-									<img src="images/avatar_no_bg.webp" alt="Avatar" style="width:150px">
+								img {
+									border-radius: 50%;
+								}
+								</style>
+								<img src="images/avatar-compressed.png" alt="Avatar" loading="lazy" style="width:150px">
 								<h1>Param Bidja</h1>
 								<p>Student
-                        &nbsp;&bull;&nbsp; Researcher &nbsp;&bull;&nbsp; Engineer </p>
-                                <ul class="icons">
-									<li><a href="https://www.linkedin.com/in/parambidja" class="icon fa-linkedin-square"><span class="label">LinkedIn</span></a></li>
+									&nbsp;&bull;&nbsp; Researcher &nbsp;&bull;&nbsp; Engineer </p>
+									<ul class="icons">
+										<li><a href="https://www.linkedin.com/in/parambidja" class="icon fa-linkedin-square"><span class="label">LinkedIn</span></a></li>
 
 									<li><a href="https://github.com/parambidja" class="icon fa-github"><span class="label">Github</span></a></li>
 
@@ -63,7 +63,9 @@
 						<!-- Intro -->
 							<article id="intro">
 								<h2 class="major">About</h2>
-								<span class="image main"><img src="images/italy.webp" loading="lazy" alt=""/></span>
+								<span class="image main">
+									<img src="images/italy.jpeg" loading="lazy" alt=""/>
+								</span>
 
                     <h3 class="major">Current</h3>
 	                    <ul>
