--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<link rel = "icon" href="./images/avatar_no_bg.webp" type = "image/x-icon">
+		<link rel = "icon" href="./images/avatar-compressed.png" type = "image/x-icon">
 				<!-- Global site tag (gtag.js) - Google Analytics -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-118745341-1"></script>
 		<script>
