adding medium profile and readme

--- a/index.html
+++ b/index.html
@@ -1,166 +1,168 @@
 <!DOCTYPE HTML>
 
 <html>
-	<head>
-		<link rel = "icon" href="./images/avatar-compressed.png" type = "image/x-icon">
-				<!-- Global site tag (gtag.js) - Google Analytics -->
-		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-118745341-1"></script>
-		<script>
-		  window.dataLayer = window.dataLayer || [];
-		  function gtag(){dataLayer.push(arguments);}
-		  gtag('js', new Date());
+<head>
+	<link rel = "icon" href="./images/avatar-compressed.png" type = "image/x-icon">
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-118745341-1"></script>
+	<script>
+	window.dataLayer = window.dataLayer || [];
+	function gtag(){dataLayer.push(arguments);}
+	gtag('js', new Date());
 
-		  gtag('config', 'UA-118745341-1');
-		</script>
-		<script src="particles.js"></script>
+	gtag('config', 'UA-118745341-1');
+	</script>
+	<script src="particles.js"></script>
 
-		<title>Param Bidja</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-	</head>
-	<body>
-		<!-- Wrapper -->
-			<div id="wrapper">
-			<div id="particles-js" class="particles-formatting"></div>
-				<!-- Header -->
-					<header id="header">
+	<title>Param Bidja</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<link rel="stylesheet" href="assets/css/main.css" />
+	<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
+	<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+</head>
+<body>
+	<!-- Wrapper -->
+	<div id="wrapper">
+		<div id="particles-js" class="particles-formatting"></div>
+		<!-- Header -->
+		<header id="header">
 
-						<div class="content">
-							<div class="inner">
-								<style>
-								img {
-									border-radius: 50%;
-								}
-								</style>
-								<img src="images/avatar-compressed.png" alt="Avatar" loading="lazy" style="width:150px">
-								<h1>Param Bidja</h1>
-								<p>Student
-									&nbsp;&bull;&nbsp; Researcher &nbsp;&bull;&nbsp; Engineer </p>
-									<ul class="icons">
-										<li><a href="https://www.linkedin.com/in/parambidja" class="icon fa-linkedin-square"><span class="label">LinkedIn</span></a></li>
+			<div class="content">
+				<div class="inner">
+					<style>
+					img {
+						border-radius: 50%;
+					}
+					</style>
+					<img src="images/avatar-compressed.png" alt="Avatar" loading="lazy" style="width:150px">
+					<h1>Param Bidja</h1>
+					<p>Student
+						&nbsp;&bull;&nbsp; Researcher &nbsp;&bull;&nbsp; Engineer </p>
+						<ul class="icons">
+							<li><a href="https://www.linkedin.com/in/parambidja" class="icon fa-linkedin-square"><span class="label">LinkedIn</span></a></li>
 
-									<li><a href="https://github.com/parambidja" class="icon fa-github"><span class="label">Github</span></a></li>
+							<li><a href="https://github.com/parambidja" class="icon fa-github"><span class="label">Github</span></a></li>
 
-                                    <li><a href="https://www.instagram.com/parambidja/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+							<li><a href="https://parambidja.medium.com" class="icon fa fa-medium"><span class="label">Medium</span></a></li>
 
-                                    <li><a href="mailto:parambidja@gmail.com?Subject=Hello" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
-							</div>
+							<li><a href="https://www.instagram.com/parambidja/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+
+							<li><a href="mailto:parambidja@gmail.com?Subject=Hello" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 						</div>
-						<nav>
-							<ul>
-								<li><a href="#intro">About</a></li>
-								<!-- <li><a href="assets/blog/index.html">Blog</a></li> -->
-							</ul>
-						</nav>
-					</header>
+					</div>
+					<nav>
+						<ul>
+							<li><a href="#intro">About</a></li>
+							<!-- <li><a href="assets/blog/index.html">Blog</a></li> -->
+						</ul>
+					</nav>
+				</header>
 
 				<!-- Main -->
-					<div id="main">
+				<div id="main">
 
-						<!-- Intro -->
-							<article id="intro">
-								<h2 class="major">About</h2>
-								<span class="image main">
-									<img src="images/italy.jpeg" loading="lazy" alt=""/>
-								</span>
+					<!-- Intro -->
+					<article id="intro">
+						<h2 class="major">About</h2>
+						<span class="image main">
+							<img src="images/italy.jpeg" loading="lazy" alt=""/>
+						</span>
 
-                    <h3 class="major">Current</h3>
-	                    <ul>
-						  <li>Software Development Engineer II @ <a href="https://amazon.com" target="_blank">Amazon</a> 👨‍💻</li>
-						  <li>Machine Learning for <a href="https://www.amazon.jobs/en/business_categories/retail" target="_blank">Amazon Retail</a> 🛍️🔎</li>
-						  <li>Researcher @ <a href="https://healthinfo.lab.uconn.edu/" target="_blank">Laboratory of Machine Learning & Health Informatics</a> 🔬👨‍⚕</li>
-						  <li>Regional Core Team Lead @ <a href="https://www.bapscharities.org/usa/" target="_blank">BAPS</a> Youth Activities 👨‍🏫</li>
+						<h3 class="major">Current</h3>
+						<ul>
+							<li>Software Development Engineer II @ <a href="https://amazon.com" target="_blank">Amazon</a> 👨‍💻</li>
+							<li>Machine Learning for <a href="https://www.amazon.jobs/en/business_categories/retail" target="_blank">Amazon Retail</a> 🛍️🔎</li>
+							<li>Researcher @ <a href="https://healthinfo.lab.uconn.edu/" target="_blank">Laboratory of Machine Learning & Health Informatics</a> 🔬👨‍⚕</li>
+							<li>Regional Core Team Lead @ <a href="https://www.bapscharities.org/usa/" target="_blank">BAPS</a> Youth Activities 👨‍🏫</li>
 						</ul>
 
-                    <h3 class="major">Past</h3>
-	                    <ul>
-                            <li>Valedictorian @ <a href="https://www.engr.uconn.edu/" target="_blank">UConn Engineering</a> 🎓</li>
-                            <li>Teaching Assistant @ <a href="https://www.cse.uconn.edu/" target="_blank">UConn CSE</a> (Data Structures, Systems Programming, Computer Architecture) 🤓</li>
+						<h3 class="major">Past</h3>
+						<ul>
+							<li>Valedictorian @ <a href="https://www.engr.uconn.edu/" target="_blank">UConn Engineering</a> 🎓</li>
+							<li>Teaching Assistant @ <a href="https://www.cse.uconn.edu/" target="_blank">UConn CSE</a> (Data Structures, Systems Programming, Computer Architecture) 🤓</li>
 							<li>Software Development Engineer I @ <a href="https://www.amazon.com/amazon-fashion/b?ie=UTF8&node=7141123011" target="_blank">Amazon Fashion</a> 👨‍💻</li>
-    						<li>Software Engineering Intern @ <a href="https://www.amazon.jobs/en/teams/finance-technology" target="_blank">Amazon FinTech</a> 👨‍💻</li>
-                            <li>Tech Lead @ <a href="https://twitter.com/storiesthatmove">DigiPopsTV</a> 🎥</li>
-    						<li>Software Engineering Intern @ <a href="https://www.jpmorganchase.com/" target="_blank">JP Morgan Chase</a> 📈</li>
-                            <li>Web Development Intern @ <a href="https://www.yale.edu/">Yale University</a></li>
+							<li>Software Engineering Intern @ <a href="https://www.amazon.jobs/en/teams/finance-technology" target="_blank">Amazon FinTech</a> 👨‍💻</li>
+							<li>Tech Lead @ <a href="https://twitter.com/storiesthatmove">DigiPopsTV</a> 🎥</li>
+							<li>Software Engineering Intern @ <a href="https://www.jpmorganchase.com/" target="_blank">JP Morgan Chase</a> 📈</li>
+							<li>Web Development Intern @ <a href="https://www.yale.edu/">Yale University</a></li>
 						</ul>
 
-                    <h3 class="major">Projects</h3>
-                        <ul>
-                            <li>Using Graph Neural Networks to predict <b>depression</b> levels <a href="https://opencommons.uconn.edu/srhonors_theses/607/" target="_blank">[paper]</a></li>
-                            <li>Image Classifier using Transferred Learning <a href="https://github.com/parambidja/image-classifier" target="_blank">[code]</a></li>
-                            <li>Raspberry Pi HVAC Controller - making your old HVAC systems <b>smart</b> with a simple extension (ongoing)</li>
-                            <li>EpiPing - a smart EpiPen <a href="https://drive.google.com/drive/folders/0BxkS6FqSWD9MWVNTYUtOeTVsYkk" target="_blank">[demo]</a></li>
-                            <li>AlphaToe Modeling - visualization of a deep neural network that beats you at TicTacToe</li>
-                            <li><a href="https://github.com/parambidja?tab=repositories" target="_basic">A few more...</a></li>
-                        </ul>
-                    <h3 class="major">Interests</h3>
-                        <ul>
-                            <li>After reading <a href="https://www.amazon.com/When-Breath-Becomes-Paul-Kalanithi/dp/081298840X" target="_blank">When Breath Becomes Air</a> I kinda want to go to medical school</li>
-                            <li>Started growing a basil plant and I love it (her name is Tulsi) 🌱</li>
-                            <li>NYC pizza (faves: <a href="http://kestepizzeria.com/en/home/" target="_blank">Keste</a> & <a href="https://www.artichokepizza.com/" target="_blank">Artichoke Basille's</a>) 🍕 (minus the pepperoni)</li>
-                            <li> Podcasts (faves: <a href="https://podcasts.apple.com/us/podcast/revisionist-history/id1119389968" target="_blank">Revisionist History</a>, <a href="https://podcasts.apple.com/us/podcast/how-i-built-this-with-guy-raz/id1150510297" target="_blank">How I Built This</a>, <a href="https://podcasts.apple.com/us/podcast/13-minutes-to-the-moon/id1459657136" target="_blank">13 Minutes to the Moon</a>)</li>
-                        </ul>
-                                <p> Feel free to contact me at <a href="mailto: parambidja@gmail.com">parambidja@gmail.com</a> if you want to chat!</p>
-							</article>
+						<h3 class="major">Projects</h3>
+						<ul>
+							<li>Using Graph Neural Networks to predict <b>depression</b> levels <a href="https://opencommons.uconn.edu/srhonors_theses/607/" target="_blank">[paper]</a></li>
+							<li>Image Classifier using Transferred Learning <a href="https://github.com/parambidja/image-classifier" target="_blank">[code]</a></li>
+							<li>Raspberry Pi HVAC Controller - making your old HVAC systems <b>smart</b> with a simple extension (ongoing)</li>
+							<li>EpiPing - a smart EpiPen <a href="https://drive.google.com/drive/folders/0BxkS6FqSWD9MWVNTYUtOeTVsYkk" target="_blank">[demo]</a></li>
+							<li>AlphaToe Modeling - visualization of a deep neural network that beats you at TicTacToe</li>
+							<li><a href="https://github.com/parambidja?tab=repositories" target="_basic">A few more...</a></li>
+						</ul>
+						<h3 class="major">Interests</h3>
+						<ul>
+							<li>After reading <a href="https://www.amazon.com/When-Breath-Becomes-Paul-Kalanithi/dp/081298840X" target="_blank">When Breath Becomes Air</a> I kinda want to go to medical school</li>
+							<li>Started growing a basil plant and I love it (her name is Tulsi) 🌱</li>
+							<li>NYC pizza (faves: <a href="http://kestepizzeria.com/en/home/" target="_blank">Keste</a> & <a href="https://www.artichokepizza.com/" target="_blank">Artichoke Basille's</a>) 🍕 (minus the pepperoni)</li>
+							<li> Podcasts (faves: <a href="https://podcasts.apple.com/us/podcast/revisionist-history/id1119389968" target="_blank">Revisionist History</a>, <a href="https://podcasts.apple.com/us/podcast/how-i-built-this-with-guy-raz/id1150510297" target="_blank">How I Built This</a>, <a href="https://podcasts.apple.com/us/podcast/13-minutes-to-the-moon/id1459657136" target="_blank">13 Minutes to the Moon</a>)</li>
+						</ul>
+						<p> Feel free to contact me at <a href="mailto: parambidja@gmail.com">parambidja@gmail.com</a> if you want to chat!</p>
+					</article>
 
 
 
-						<!-- Elements -->
+					<!-- Elements -->
 
-							<article id="elements">
-								<h2 class="major">Elements</h2>
-								<section>
-
-
-
-									<h4>Actions</h4>
-									<ul class="actions">
-										<li><a href="#" class="button special">Default</a></li>
-										<li><a href="#" class="button">Default</a></li>
-									</ul>
-									<ul class="actions vertical">
-										<li><a href="#" class="button special">Default</a></li>
-										<li><a href="#" class="button">Default</a></li>
-									</ul>
-								</section>
+					<article id="elements">
+						<h2 class="major">Elements</h2>
+						<section>
 
 
-<!--
 
--->
-
-								<section>
-									<h3 class="major">Buttons</h3>
-									<ul class="actions">
-										<li><a href="#" class="button special">Special</a></li>
-										<li><a href="#" class="button">Default</a></li>
-									</ul>
-									<ul class="actions">
-										<li><a href="#" class="button">Default</a></li>
-										<li><a href="#" class="button small">Small</a></li>
-									</ul>
-									<ul class="actions">
-										<li><a href="#" class="button special icon fa-download">Icon</a></li>
-										<li><a href="#" class="button icon fa-download">Icon</a></li>
-									</ul>
-									<ul class="actions">
-										<li><span class="button special disabled">Disabled</span></li>
-										<li><span class="button disabled">Disabled</span></li>
-									</ul>
-								</section>
+							<h4>Actions</h4>
+							<ul class="actions">
+								<li><a href="#" class="button special">Default</a></li>
+								<li><a href="#" class="button">Default</a></li>
+							</ul>
+							<ul class="actions vertical">
+								<li><a href="#" class="button special">Default</a></li>
+								<li><a href="#" class="button">Default</a></li>
+							</ul>
+						</section>
 
 
-							</article>
+						<!--
 
-					</div>
+					-->
 
-				<!-- Footer -->
-					<footer id="footer">
-					</footer>
+					<section>
+						<h3 class="major">Buttons</h3>
+						<ul class="actions">
+							<li><a href="#" class="button special">Special</a></li>
+							<li><a href="#" class="button">Default</a></li>
+						</ul>
+						<ul class="actions">
+							<li><a href="#" class="button">Default</a></li>
+							<li><a href="#" class="button small">Small</a></li>
+						</ul>
+						<ul class="actions">
+							<li><a href="#" class="button special icon fa-download">Icon</a></li>
+							<li><a href="#" class="button icon fa-download">Icon</a></li>
+						</ul>
+						<ul class="actions">
+							<li><span class="button special disabled">Disabled</span></li>
+							<li><span class="button disabled">Disabled</span></li>
+						</ul>
+					</section>
+
+
+				</article>
 
 			</div>
+
+			<!-- Footer -->
+			<footer id="footer">
+			</footer>
+
+		</div>
 
 		<!-- Scripts -->
 		<script>
@@ -169,10 +171,10 @@
 			console.log('callback - particles.js config loaded');
 		});
 		</script>
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/skel.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+		<script src="assets/js/jquery.min.js"></script>
+		<script src="assets/js/skel.min.js"></script>
+		<script src="assets/js/util.js"></script>
+		<script src="assets/js/main.js"></script>
 
 	</body>
-</html>
+	</html>
