updated with new job

--- a/index.html
+++ b/index.html
@@ -71,9 +71,8 @@
 
 						<h3 class="major">Current</h3>
 						<ul>
-							<li>Software Development Engineer II @ <a href="https://amazon.com" target="_blank">Amazon</a> 👨‍💻</li>
-							<li>Machine Learning for <a href="https://www.amazon.jobs/en/business_categories/retail" target="_blank">Amazon Retail</a> 🛍️🔎</li>
-							<li>Researcher @ <a href="https://healthinfo.lab.uconn.edu/" target="_blank">Laboratory of Machine Learning & Health Informatics</a> 🔬👨‍⚕</li>
+							<li>Software Development Engineer II @ <a href="https://aws.amazon.com/health/" target="_blank">AWS Health AI</a> 👨‍💻👨‍⚕️</li>
+							<li>Researcher @ <a href="https://healthinfo.lab.uconn.edu/" target="_blank">Laboratory of Machine Learning & Health Informatics</a> 🔬‍⚕</li>
 							<li>Regional Core Team Lead @ <a href="https://www.bapscharities.org/usa/" target="_blank">BAPS</a> Youth Activities 👨‍🏫</li>
 						</ul>
 
@@ -82,6 +81,7 @@
 							<li>Valedictorian @ <a href="https://www.engr.uconn.edu/" target="_blank">UConn Engineering</a> 🎓</li>
 							<li>Teaching Assistant @ <a href="https://www.cse.uconn.edu/" target="_blank">UConn CSE</a> (Data Structures, Systems Programming, Computer Architecture) 🤓</li>
 							<li>Software Development Engineer I @ <a href="https://www.amazon.com/amazon-fashion/b?ie=UTF8&node=7141123011" target="_blank">Amazon Fashion</a> 👨‍💻</li>
+							<li>Machine Learning for <a href="https://www.amazon.jobs/en/business_categories/retail" target="_blank">Amazon Retail</a> 🛍️🔎</li>
 							<li>Software Engineering Intern @ <a href="https://www.amazon.jobs/en/teams/finance-technology" target="_blank">Amazon FinTech</a> 👨‍💻</li>
 							<li>Tech Lead @ <a href="https://twitter.com/storiesthatmove">DigiPopsTV</a> 🎥</li>
 							<li>Software Engineering Intern @ <a href="https://www.jpmorganchase.com/" target="_blank">JP Morgan Chase</a> 📈</li>
