adding richard green position

--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
 						<ul>
 							<li>Software Development Engineer II @ <a href="https://aws.amazon.com/health/" target="_blank">AWS Health AI</a> 👨‍💻👨‍⚕️</li>
 							<li>Researcher @ <a href="https://healthinfo.lab.uconn.edu/" target="_blank">Laboratory of Machine Learning & Health Informatics</a> 🔬‍⚕</li>
+							<li>Volunteer Computer Science teacher @ <a href="https://www.rrghst.org/" target="_blank">NYC Public Schools</a> 👨‍🏫</li>
 							<li>Regional Core Team Lead @ <a href="https://www.bapscharities.org/usa/" target="_blank">BAPS</a> Youth Activities 👨‍🏫</li>
 						</ul>
 
@@ -102,7 +103,7 @@
 							<li>After reading <a href="https://www.amazon.com/When-Breath-Becomes-Paul-Kalanithi/dp/081298840X" target="_blank">When Breath Becomes Air</a> I kinda want to go to medical school</li>
 							<li>Started growing a basil plant and I love it (her name is Tulsi) 🌱</li>
 							<li>NYC pizza (faves: <a href="http://kestepizzeria.com/en/home/" target="_blank">Keste</a> & <a href="https://www.artichokepizza.com/" target="_blank">Artichoke Basille's</a>) 🍕 (minus the pepperoni)</li>
-							<li> Podcasts (faves: <a href="https://podcasts.apple.com/us/podcast/revisionist-history/id1119389968" target="_blank">Revisionist History</a>, <a href="https://podcasts.apple.com/us/podcast/how-i-built-this-with-guy-raz/id1150510297" target="_blank">How I Built This</a>, <a href="https://podcasts.apple.com/us/podcast/13-minutes-to-the-moon/id1459657136" target="_blank">13 Minutes to the Moon</a>)</li>
+							<li>Podcasts (faves: <a href="https://podcasts.apple.com/us/podcast/revisionist-history/id1119389968" target="_blank">Revisionist History</a>, <a href="https://podcasts.apple.com/us/podcast/how-i-built-this-with-guy-raz/id1150510297" target="_blank">How I Built This</a>, <a href="https://podcasts.apple.com/us/podcast/13-minutes-to-the-moon/id1459657136" target="_blank">13 Minutes to the Moon</a>)</li>
 						</ul>
 						<p> Feel free to contact me at <a href="mailto: parambidja@gmail.com">parambidja@gmail.com</a> if you want to chat!</p>
 					</article>
