--- a/index.html
+++ b/index.html
@@ -37,8 +37,7 @@
 					</style>
 					<img src="images/avatar-compressed.png" alt="Avatar" loading="lazy" style="width:150px">
 					<h1>Param Bidja</h1>
-					<p>Student
-						&nbsp;&bull;&nbsp; Researcher &nbsp;&bull;&nbsp; Engineer </p>
+					<p>Software Engineer</p>
 						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/parambidja" class="icon fa-linkedin-square"><span class="label">LinkedIn</span></a></li>
 
@@ -72,13 +71,13 @@
 						<h3 class="major">Current</h3>
 						<ul>
 							<li>Software Development Engineer II @ <a href="https://aws.amazon.com/health/" target="_blank">AWS Health AI</a> 👨‍💻👨‍⚕️</li>
-							<li>Researcher @ <a href="https://healthinfo.lab.uconn.edu/" target="_blank">Laboratory of Machine Learning & Health Informatics</a> 🔬‍⚕</li>
-							<li>Volunteer Computer Science teacher @ <a href="https://www.rrghst.org/" target="_blank">NYC Public Schools</a> 👨‍🏫</li>
-							<li>Regional Core Team Lead @ <a href="https://www.bapscharities.org/usa/" target="_blank">BAPS</a> Youth Activities 👨‍🏫</li>
+							<li>North American Development Comitee Lead @ <a href="https://www.bapscharities.org/usa/" target="_blank">BAPS</a> Youth Activities 👨‍🏫</li>
 						</ul>
 
 						<h3 class="major">Past</h3>
 						<ul>
+							<li>Researcher @ <a href="https://healthinfo.lab.uconn.edu/" target="_blank">Laboratory of Machine Learning & Health Informatics</a> 🔬‍⚕</li>
+							<li>Volunteer Computer Science teacher @ <a href="https://www.rrghst.org/" target="_blank">NYC Public Schools</a> 👨‍🏫</li>
 							<li>Valedictorian @ <a href="https://www.engr.uconn.edu/" target="_blank">UConn Engineering</a> 🎓</li>
 							<li>Teaching Assistant @ <a href="https://www.cse.uconn.edu/" target="_blank">UConn CSE</a> (Data Structures, Systems Programming, Computer Architecture) 🤓</li>
 							<li>Software Development Engineer I @ <a href="https://www.amazon.com/amazon-fashion/b?ie=UTF8&node=7141123011" target="_blank">Amazon Fashion</a> 👨‍💻</li>
@@ -100,9 +99,9 @@
 						</ul>
 						<h3 class="major">Interests</h3>
 						<ul>
-							<li>After reading <a href="https://www.amazon.com/When-Breath-Becomes-Paul-Kalanithi/dp/081298840X" target="_blank">When Breath Becomes Air</a> I kinda want to go to medical school</li>
-							<li>Started growing a basil plant and I love it (her name is Tulsi) 🌱</li>
-							<li>NYC pizza (faves: <a href="http://kestepizzeria.com/en/home/" target="_blank">Keste</a> & <a href="https://www.artichokepizza.com/" target="_blank">Artichoke Basille's</a>) 🍕 (minus the pepperoni)</li>
+							<li>I am very interested in the intersection of medicine and technology</li>
+							<li>I've recently been indoor rock climbing, although I am not very good (yet) 🧗‍♂️</li>
+							<li>NYC pizza (faves: <a href="https://www.rubirosanyc.com/" target="_blank">Rubirosa</a> & <a href="https://www.johnsofbleecker.com/" target="_blank">John's on Bleeker</a>) 🍕 (minus the pepperoni)</li>
 							<li>Podcasts (faves: <a href="https://podcasts.apple.com/us/podcast/revisionist-history/id1119389968" target="_blank">Revisionist History</a>, <a href="https://podcasts.apple.com/us/podcast/how-i-built-this-with-guy-raz/id1150510297" target="_blank">How I Built This</a>, <a href="https://podcasts.apple.com/us/podcast/13-minutes-to-the-moon/id1459657136" target="_blank">13 Minutes to the Moon</a>)</li>
 						</ul>
 						<p> Feel free to contact me at <a href="mailto: parambidja@gmail.com">parambidja@gmail.com</a> if you want to chat!</p>
