--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
 						<h3 class="major">Current</h3>
 						<ul>
-							<li>Software Development Engineer II @ <a href="https://aws.amazon.com/health/" target="_blank">AWS Health AI</a> 👨‍💻👨‍⚕️</li>
+							<li>Senior Software Engineer @ <a href="https://aws.amazon.com/healthlake/" target="_blank">AWS Health AI</a> 👨‍💻👨‍⚕️</li>
 							<li>North American Development Comitee Lead @ <a href="https://www.bapscharities.org/usa/" target="_blank">BAPS</a> Youth Activities 👨‍🏫</li>
 						</ul>
 
