--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 
 							<li><a href="https://www.instagram.com/parambidja/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 
+							<li><a href="mailto:parambidja@gmail.com?Subject=Hello" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 						</div>
 					</div>
 					<nav>
@@ -103,11 +104,7 @@
 							<li>NYC pizza (faves: <a href="https://www.rubirosanyc.com/" target="_blank">Rubirosa</a> & <a href="https://www.johnsofbleecker.com/" target="_blank">John's on Bleeker</a>) 🍕 (minus the pepperoni)</li>
 							<li>Podcasts (faves: <a href="https://podcasts.apple.com/us/podcast/revisionist-history/id1119389968" target="_blank">Revisionist History</a>, <a href="https://podcasts.apple.com/us/podcast/how-i-built-this-with-guy-raz/id1150510297" target="_blank">How I Built This</a>, <a href="https://podcasts.apple.com/us/podcast/13-minutes-to-the-moon/id1459657136" target="_blank">13 Minutes to the Moon</a>)</li>
 						</ul>
-
-						<p>
-							<div data-tf-widget="ssqaWXc7" data-tf-opacity="100" data-tf-iframe-props="title=Contact Me" data-tf-transitive-search-params data-tf-medium="snippet" style="width:100%;height:500px;"></div>
-							<script src="//embed.typeform.com/next/embed.js"></script>
-						</p>
+						<p> Feel free to contact me at <a href="mailto: parambidja@gmail.com">parambidja@gmail.com</a> if you want to chat!</p>
 					</article>
 
 
