--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 					</style>
 					<img src="images/avatar-compressed.png" alt="Avatar" loading="lazy" style="width:150px">
 					<h1>Param Bidja</h1>
-					<p>Software Engineer</p>
+					<p>Software Engineer & Founder</p>
 						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/parambidja" class="icon fa-linkedin-square"><span class="label">LinkedIn</span></a></li>
 
@@ -71,12 +71,13 @@
 
 						<h3 class="major">Current</h3>
 						<ul>
-							<li>Senior Software Engineer @ <a href="https://aws.amazon.com/healthlake/" target="_blank">AWS Health AI</a> 👨‍💻👨‍⚕️</li>
+							<li>Building software for small businesses, backed by <a href="https://www.ycombinator.com/" target="_blank">YCombinator</a></li>
 							<li>North American Development Comitee Lead @ <a href="https://www.bapscharities.org/usa/" target="_blank">BAPS</a> Youth Activities 👨‍🏫</li>
 						</ul>
 
 						<h3 class="major">Past</h3>
 						<ul>
+							<li>Senior Software Engineer @ <a href="https://aws.amazon.com/healthlake/" target="_blank">AWS Health AI</a> 👨‍💻👨‍⚕️</li>
 							<li>Researcher @ <a href="https://healthinfo.lab.uconn.edu/" target="_blank">Laboratory of Machine Learning & Health Informatics</a> 🔬‍⚕</li>
 							<li>Volunteer Computer Science teacher @ <a href="https://www.rrghst.org/" target="_blank">NYC Public Schools</a> 👨‍🏫</li>
 							<li>Valedictorian @ <a href="https://www.engr.uconn.edu/" target="_blank">UConn Engineering</a> 🎓</li>
