--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 	gtag('config', 'UA-118745341-1');
 	</script>
-	<script src="particles.js"></script>
+	<!-- <script src="particles.js"></script> -->
 
 	<title>Param Bidja</title>
 	<meta charset="utf-8" />
@@ -66,7 +66,7 @@
 					<article id="intro">
 						<h2 class="major">About</h2>
 						<span class="image main">
-							<img src="images/italy.jpeg" loading="lazy" alt=""/>
+							<img src="images/headshot.jpg" loading="lazy" alt=""/>
 						</span>
 
 						<h3 class="major">Current</h3>
@@ -169,9 +169,9 @@
 		<!-- Scripts -->
 		<script>
 		/* particlesJS.load(@dom-id, @path-json, @callback (optional)); */
-		particlesJS.load('particles-js', 'particlesjs-config.json', function() {
-			console.log('callback - particles.js config loaded');
-		});
+		// particlesJS.load('particles-js', 'particlesjs-config.json', function() {
+		// 	console.log('callback - particles.js config loaded');
+		// });
 		</script>
 		<script src="assets/js/jquery.min.js"></script>
 		<script src="assets/js/skel.min.js"></script>
